Stop scrolling on mobile screens

--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ button {
 @media (max-width: 500px) {
   .container {
     background-color: #000;
+    height: 100%;
+    overflow: hidden;
   }
 
   .calculator {
